[gd_scene load_steps=11 format=2]

[ext_resource path="res://unit/Statistics.tscn" type="PackedScene" id=1]
[ext_resource path="res://neutral_units/skeleton-red_eyes-NESW.png" type="Texture" id=2]
[ext_resource path="res://unit/state_machine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://unit/state_machine/Navigating.tscn" type="PackedScene" id=4]
[ext_resource path="res://unit/navigation/Navigation.tscn" type="PackedScene" id=5]
[ext_resource path="res://neutral_units/Roaming.gd" type="Script" id=6]
[ext_resource path="res://neutral_units/NeutralUnit.gd" type="Script" id=7]
[ext_resource path="res://unit/Vision.tscn" type="PackedScene" id=8]
[ext_resource path="res://unit/state_machine/Combat.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 26.4153

[node name="NeutralUnit" type="KinematicBody2D" groups=[
"neutral",
]]
collision_mask = 12
script = ExtResource( 7 )

[node name="Statistics" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.594604, -5.35143 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 128, 48, 64 )
region_filter_clip = true

[node name="Navigation" parent="." instance=ExtResource( 5 )]

[node name="Vision" parent="." instance=ExtResource( 8 )]

[node name="StateMachine" type="Node2D" parent="." groups=[
"state_machine",
]]
script = ExtResource( 3 )
starting_state = "Roaming"

[node name="Navigating" parent="StateMachine" instance=ExtResource( 4 )]

[node name="Roaming" type="Node2D" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Combat" parent="StateMachine" instance=ExtResource( 9 )]

[connection signal="died" from="Statistics" to="." method="_on_died"]
[connection signal="enemy_detected" from="Vision" to="." method="_on_vision_enemy_detected"]
